workspace-sf/force-app/main/default/objects/DocumentoProduto__c/DocumentoProduto__c.object-meta.xml
<CustomObject>
    <description>Objeto para armazenar os documentos de entrada e saída dos produtos</description>
    <label>Documento do produto</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Documentos do produto</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>