workspace-sf/force-app/main/default/objects/DocumentoProduto__c/fields/Documento__c.field-meta.xml
<CustomField>
    <fullName>Documento__c</fullName>
    <label>Documento</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Tipo__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Documentos</valueSetName>
    </valueSet>
</CustomField>