workspace-sf/force-app/main/default/objects/DocumentoProduto__c/fields/MeioEnvio__c.field-meta.xml
<CustomField>
    <fullName>MeioEnvio__c</fullName>
    <label>Meio de envio</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Portal do cliente</fullName>
            </value>
            <value>
                <fullName>Portal do corretor</fullName>
            </value>
            <value>
                <fullName>Protocolo manual</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Whatsapp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>