workspace-sf/force-app/main/default/objects/DocumentoProduto__c/fields/MomentoEnvio__c.field-meta.xml
<CustomField>
    <fullName>MomentoEnvio__c</fullName>
    <label>Momento de envio</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Endosso</fullName>
            </value>
            <value>
                <fullName>Novo</fullName>
            </value>
            <value>
                <fullName>Renovação</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>